# docmap

./: .dockerignore  .env.example  .gitignore  .ignore  ARCHITECTURE.md  CHANGELOG.md  DATA_MODEL.md  Dockerfile  Dockerfile.presentation  PIPELINE.md  PRESENTATION_API_SPEC.md  PRESENTATION_ARCHITECTURE.md  PRESENTATION_DATA_CONTRACT.md  PRESENTATION_IMPLEMENTATION_PLAN.md  PRESENTATION_UX_SPEC.md  PROJECT.md  README.md  SERVICES.md  all-objects.txt  main.py  main_presentation.py  pyproject.toml
AGENT/: AGENT_RULES.md  ANTI_PATTERNS.md  AUTONOMY_CHECKLIST.md  CODING_CONVENTIONS.md  DEV_WORKFLOW.md  EXECUTION_SPEC.md  MAP_GEOMETRY_HANDOFF.md  PRESENTATION_EXECUTION_RULES.md  SYSTEM_PROMPT.md
TASKS/: phase0_bootstrap.md  phase10_control_plane.md  phase11_presentation_layer.md  phase12_code_alignment.md  phase12_execution_checklist  phase12_presentation_ux_iteration_1.md  phase13_map_geometry.md  phase1_database.md  phase2_crawler.md  phase3_extraction.md  phase4_normalization.md  phase5_geocoding.md  phase6_analytics.md  phase7_bigquery.md  phase8_scheduler.md  phase9_pipeline_hardening.md
database/: control_plane.sql  schema.sql  seed_scp_objects.sql
doc_loader_http_elastic/: doc_loader_http_elastic.sln
docs/: CONFIGURATION.md  CONTROL_API.md  CONTROL_API.openapi.yaml  CONTROL_UI.md  DEVELOPMENT.md  DOMAIN_CONTEXT.md  OPERATIONS.md  REPOSITORY_MAP.md  VERIFICATION.md
infra/: docker-compose.yml  vm-park-e9e56fc23e33.json
tests/: test_analytics_geometry_assets.py  test_analytics_service.py  test_bigquery_exporter.py  test_bootstrap.py  test_control_api.py  (+18 more)
(+86 files in other folders)
